--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "logrocket": "^1.0.9",
     "react": "16.11.0",
     "react-native": "0.62.2"
   },
